bindings/c/include/proven.h

/* ============================================================================
 * Status Codes
 * ============================================================================ */

/**
 * @brief Status codes returned by Proven operations.
 *
 * Zero indicates success; negative values indicate specific error conditions.
 */
typedef enum {
    PROVEN_OK                      =   0,
    PROVEN_ERR_NULL_POINTER        =  -1,
    PROVEN_ERR_INVALID_ARGUMENT    =  -2,
    PROVEN_ERR_OVERFLOW            =  -3,
    PROVEN_ERR_UNDERFLOW           =  -4,
    PROVEN_ERR_DIVISION_BY_ZERO    =  -5,
    PROVEN_ERR_PARSE_FAILURE       =  -6,
    PROVEN_ERR_VALIDATION_FAILED   =  -7,
    PROVEN_ERR_OUT_OF_BOUNDS       =  -8,
    PROVEN_ERR_ENCODING_ERROR      =  -9,
    PROVEN_ERR_ALLOCATION_FAILED   = -10,
    PROVEN_ERR_NOT_IMPLEMENTED     = -99
} ProvenStatus;
/* ============================================================================
 * Core Result Types
 * ============================================================================ */

/** @brief Result for integer operations */
typedef struct { int32_t status; int64_t value; } ProvenIntResult;
/** @brief Result for boolean operations */
typedef struct { int32_t status; bool value; } ProvenBoolResult;
/**
 * @brief Result for string operations.
 * @note Caller must free value using proven_free_string().
 */
typedef struct { int32_t status; char* value; size_t length; } ProvenStringResult;
/* ============================================================================
 * SafeCookie - HTTP cookie safety (6 functions)
 * ============================================================================ */

/** @brief SameSite attribute values. */
typedef enum {
    PROVEN_SAMESITE_STRICT = 0,
    PROVEN_SAMESITE_LAX    = 1,
    PROVEN_SAMESITE_NONE   = 2
} ProvenSameSite;
/** @brief Cookie attributes for Set-Cookie header building. */
typedef struct {
    const uint8_t* domain;       size_t domain_len;
    const uint8_t* path;         size_t path_len;
    int64_t        max_age;      /**< -1 means not set */
    bool           secure;
    bool           http_only;
    ProvenSameSite same_site;
    bool           partitioned;
} ProvenCookieAttributes;
/**
 * @brief Check for cookie injection characters (semicolon, CR, LF).
 * @return Result with detection status (true = injection found).
 */
ProvenBoolResult proven_cookie_has_injection(const uint8_t* ptr, size_t len);
/**
 * @brief Validate cookie name.
 * @return Result with validation status.
 */
ProvenBoolResult proven_cookie_validate_name(const uint8_t* ptr, size_t len);
/**
 * @brief Validate cookie value.
 * @return Result with validation status.
 */
ProvenBoolResult proven_cookie_validate_value(const uint8_t* ptr, size_t len);
/**
 * @brief Get cookie prefix type.
 * @return Result with prefix type: 0=none, 1=__Secure-, 2=__Host-.
 */
ProvenIntResult proven_cookie_get_prefix(const uint8_t* ptr, size_t len);
/**
 * @brief Build Set-Cookie header value.
 * @param name_ptr Cookie name.
 * @param name_len Cookie name length.
 * @param value_ptr Cookie value.
 * @param value_len Cookie value length.
 * @param attrs Cookie attributes.
 * @return Result with Set-Cookie value (caller must free).
 */
ProvenStringResult proven_cookie_build_set_cookie(
    const uint8_t* name_ptr, size_t name_len,
    const uint8_t* value_ptr, size_t value_len,
    ProvenCookieAttributes attrs
);
/**
 * @brief Build delete cookie header value (sets expiry in the past).
 * @return Result with Set-Cookie value (caller must free).
 */
ProvenStringResult proven_cookie_build_delete(const uint8_t* name_ptr, size_t name_len);
/* ============================================================================
 * SafeContentType - Content-Type / MIME handling (6 functions)
 * ============================================================================ */

/** @brief Media type category. */
typedef enum {
    PROVEN_MEDIA_TEXT        = 0,
    PROVEN_MEDIA_IMAGE       = 1,
    PROVEN_MEDIA_AUDIO       = 2,
    PROVEN_MEDIA_VIDEO       = 3,
    PROVEN_MEDIA_APPLICATION = 4,
    PROVEN_MEDIA_MULTIPART   = 5,
    PROVEN_MEDIA_MESSAGE     = 6,
    PROVEN_MEDIA_FONT        = 7,
    PROVEN_MEDIA_MODEL       = 8,
    PROVEN_MEDIA_CUSTOM      = 9
} ProvenMediaCategory;
/** @brief Charset encoding. */
typedef enum {
    PROVEN_CHARSET_UTF8        = 0,
    PROVEN_CHARSET_UTF16LE     = 1,
    PROVEN_CHARSET_UTF16BE     = 2,
    PROVEN_CHARSET_ISO8859_1   = 3,
    PROVEN_CHARSET_ASCII       = 4,
    PROVEN_CHARSET_WINDOWS1252 = 5,
    PROVEN_CHARSET_OTHER       = 6
} ProvenCharset;
/** @brief Content-Type parse result. */
typedef struct {
    int32_t            status;
    char*              media_type;     size_t media_type_len;
    char*              subtype;        size_t subtype_len;
    char*              suffix;         size_t suffix_len;
    ProvenMediaCategory category;
    ProvenCharset       charset;
    bool                has_charset;
} ProvenContentTypeResult;
/**
 * @brief Parse Content-Type header.
 * @return Result with parsed components (caller must free with proven_content_type_free).
 */
ProvenContentTypeResult proven_content_type_parse(const uint8_t* ptr, size_t len);
/**
 * @brief Free content type result allocated by proven_content_type_parse().
 */
void proven_content_type_free(ProvenContentTypeResult* result);
/**
 * @brief Check if content type can be sniffed to something dangerous.
 * @return Result with detection status (true = dangerous sniffing possible).
 */
ProvenBoolResult proven_content_type_can_sniff_dangerous(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeBuffer - Bounded buffer operations (4 functions)
 * ============================================================================ */

/** @brief Opaque bounded buffer type. */
typedef struct {
    uint8_t* data;
    size_t   capacity;
    size_t   length;
} ProvenBoundedBuffer;
/** @brief Buffer creation result. */
typedef struct {
    int32_t              status;
    ProvenBoundedBuffer* buffer;
} ProvenBufferResult;
/**
 * @brief Create a bounded buffer.
 * @param capacity Maximum capacity in bytes (max 100MB).
 * @return Result with buffer pointer.
 */
ProvenBufferResult proven_buffer_create(size_t capacity);
/**
 * @brief Append data to buffer with bounds checking.
 * @return PROVEN_ERR_OUT_OF_BOUNDS if data would exceed capacity.
 */
ProvenStatus proven_buffer_append(ProvenBoundedBuffer* buffer, const uint8_t* ptr, size_t len);
/**
 * @brief Free buffer.
 * @param buffer Buffer to free (may be NULL).
 */
void proven_buffer_free(ProvenBoundedBuffer* buffer);
/* ============================================================================
 * SafeRateLimiter - Token bucket rate limiting (3 functions)
 * ============================================================================ */

/** @brief Rate limiter state. */
typedef struct {
    double  tokens;
    double  capacity;
    double  refill_rate;   /**< Tokens per second */
    int64_t last_refill;   /**< Timestamp in milliseconds */
} ProvenRateLimiter;
/**
 * @brief Create a rate limiter.
 * @param capacity Maximum token capacity.
 * @param refill_rate Tokens per second to refill.
 * @return Rate limiter pointer, or NULL on failure.
 */
ProvenRateLimiter* proven_rate_limiter_create(double capacity, double refill_rate);
/**
 * @brief Try to acquire tokens from the rate limiter.
 *
 * Automatically refills based on elapsed time before checking.
 * @return true if tokens were acquired, false if insufficient tokens.
 */
bool proven_rate_limiter_try_acquire(ProvenRateLimiter* limiter, double tokens);
/**
 * @brief Free rate limiter.
 * @param limiter Rate limiter to free (may be NULL).
 */
void proven_rate_limiter_free(ProvenRateLimiter* limiter);
/* ============================================================================
 * SafeCircuitBreaker - Fault tolerance pattern (6 functions)
 * ============================================================================ */

/** @brief Circuit breaker state. */
typedef enum {
    PROVEN_CIRCUIT_CLOSED    = 0,  /**< Normal operation, requests allowed */
    PROVEN_CIRCUIT_OPEN      = 1,  /**< Failing, requests rejected */
    PROVEN_CIRCUIT_HALF_OPEN = 2   /**< Testing recovery */
} ProvenCircuitState;
/** @brief Circuit breaker structure. */
typedef struct {
    ProvenCircuitState state;
    uint32_t failure_count;
    uint32_t failure_threshold;
    uint32_t success_count;
    uint32_t success_threshold;
    int64_t  last_failure;      /**< Timestamp of last failure (milliseconds) */
    int64_t  timeout_ms;        /**< Time before attempting recovery */
} ProvenCircuitBreaker;
/**
 * @brief Create a circuit breaker.
 * @param failure_threshold Failures before opening.
 * @param success_threshold Successes in half-open to close.
 * @param timeout_ms Time before trying half-open recovery.
 * @return Circuit breaker pointer, or NULL on failure.
 */
ProvenCircuitBreaker* proven_circuit_breaker_create(
    uint32_t failure_threshold,
    uint32_t success_threshold,
    int64_t timeout_ms
);
/**
 * @brief Check if a request should be allowed.
 * @return true if request is allowed, false if circuit is open.
 */
bool proven_circuit_breaker_allow(ProvenCircuitBreaker* cb);
/** @brief Record a successful operation. */
void proven_circuit_breaker_success(ProvenCircuitBreaker* cb);
/** @brief Record a failed operation. */
void proven_circuit_breaker_failure(ProvenCircuitBreaker* cb);
/**
 * @brief Get current circuit state.
 * @return Current state (returns OPEN if cb is NULL).
 */
ProvenCircuitState proven_circuit_breaker_state(ProvenCircuitBreaker* cb);
/** @brief Free circuit breaker (may be NULL). */
void proven_circuit_breaker_free(ProvenCircuitBreaker* cb);
/* ============================================================================
 * SafeRetry - Exponential backoff (2 functions)
 * ============================================================================ */

/** @brief Retry configuration. */
typedef struct {
    uint32_t max_attempts;
    uint64_t base_delay_ms;
    uint64_t max_delay_ms;
    double   multiplier;   /**< Exponential multiplier (e.g., 2.0) */
} ProvenRetryConfig;
/**
 * @brief Calculate delay for a given attempt.
 * @param config Retry configuration.
 * @param attempt Current attempt number (1-based).
 * @return Delay in milliseconds (with +/-25% jitter). 0 if attempt exceeds max.
 */
uint64_t proven_retry_delay(ProvenRetryConfig config, uint32_t attempt);
/**
 * @brief Check if retry should be attempted.
 * @return true if more attempts are allowed.
 */
bool proven_retry_should_retry(ProvenRetryConfig config, uint32_t attempt);
/* ============================================================================
 * SafeMonotonic - Monotonically increasing sequences (3 functions)
 * ============================================================================ */

/** @brief Monotonic counter structure. */
typedef struct {
    uint64_t value;
    uint64_t max_value;
} ProvenMonotonicCounter;
/**
 * @brief Create a monotonic counter.
 * @param initial Initial value.
 * @param max_value Maximum allowed value.
 * @return Counter pointer, or NULL if initial >= max_value.
 */
ProvenMonotonicCounter* proven_monotonic_create(uint64_t initial, uint64_t max_value);
/**
 * @brief Get next value and increment.
 * @return PROVEN_ERR_OVERFLOW if counter has reached max_value.
 */
ProvenIntResult proven_monotonic_next(ProvenMonotonicCounter* counter);
/** @brief Free monotonic counter (may be NULL). */
void proven_monotonic_free(ProvenMonotonicCounter* counter);
/* ============================================================================
 * SafeHttp - HTTP URL encoding and header parsing (3 functions)
 * ============================================================================ */

/**
 * @brief URL-encode a string (RFC 3986 percent encoding).
 *
 * Unreserved chars (A-Za-z0-9-._~) pass through; others become %XX.
 * @return Result with encoded string (caller must free).
 */
ProvenStringResult proven_http_url_encode(const uint8_t* ptr, size_t len);
/**
 * @brief URL-decode a percent-encoded string.
 * @return Result with decoded string (caller must free).
 */
ProvenStringResult proven_http_url_decode(const uint8_t* ptr, size_t len);