bindings/vala/src/lib_proven.vapi


    /* ================================================================
     * SafeHttp
     * ================================================================ */

    [CCode (cname = "proven_http_url_encode")]
    public static StringResult http_url_encode ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_http_url_decode")]
    public static StringResult http_url_decode ([CCode (array_length_type = "size_t")] uint8[] data);

    /* ================================================================
     * SafeCookie
     * ================================================================ */

    [CCode (cname = "ProvenSameSite", cprefix = "PROVEN_SAMESITE_", has_type_id = false)]
    public enum SameSite {
        [CCode (cname = "PROVEN_SAMESITE_STRICT")]
        STRICT = 0,
        [CCode (cname = "PROVEN_SAMESITE_LAX")]
        LAX = 1,
        [CCode (cname = "PROVEN_SAMESITE_NONE")]
        NONE = 2
    }

    [CCode (cname = "ProvenCookieAttributes", has_type_id = false)]
    public struct CookieAttributes {
        public uint8*   domain;       public size_t domain_len;
        public uint8*   path;         public size_t path_len;
        public int64    max_age;
        public bool     secure;
        public bool     http_only;
        public SameSite same_site;
        public bool     partitioned;
    }

    [CCode (cname = "proven_cookie_has_injection")]
    public static BoolResult cookie_has_injection ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_cookie_validate_name")]
    public static BoolResult cookie_validate_name ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_cookie_validate_value")]
    public static BoolResult cookie_validate_value ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_cookie_get_prefix")]
    public static IntResult cookie_get_prefix ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_cookie_build_set_cookie")]
    public static StringResult cookie_build_set_cookie (
        [CCode (array_length_type = "size_t")] uint8[] name_data,
        [CCode (array_length_type = "size_t")] uint8[] value_data,
        CookieAttributes attrs
    );

    [CCode (cname = "proven_cookie_build_delete")]
    public static StringResult cookie_build_delete ([CCode (array_length_type = "size_t")] uint8[] name_data);

    /* ================================================================
     * SafeContentType
     * ================================================================ */

    [CCode (cname = "ProvenMediaCategory", cprefix = "PROVEN_MEDIA_", has_type_id = false)]
    public enum MediaCategory {
        [CCode (cname = "PROVEN_MEDIA_TEXT")]
        TEXT = 0,
        [CCode (cname = "PROVEN_MEDIA_IMAGE")]
        IMAGE = 1,
        [CCode (cname = "PROVEN_MEDIA_AUDIO")]
        AUDIO = 2,
        [CCode (cname = "PROVEN_MEDIA_VIDEO")]
        VIDEO = 3,
        [CCode (cname = "PROVEN_MEDIA_APPLICATION")]
        APPLICATION = 4,
        [CCode (cname = "PROVEN_MEDIA_MULTIPART")]
        MULTIPART = 5,
        [CCode (cname = "PROVEN_MEDIA_MESSAGE")]
        MESSAGE = 6,
        [CCode (cname = "PROVEN_MEDIA_FONT")]
        FONT = 7,
        [CCode (cname = "PROVEN_MEDIA_MODEL")]
        MODEL = 8,
        [CCode (cname = "PROVEN_MEDIA_CUSTOM")]
        CUSTOM = 9
    }

    [CCode (cname = "ProvenCharset", cprefix = "PROVEN_CHARSET_", has_type_id = false)]
    public enum Charset {
        [CCode (cname = "PROVEN_CHARSET_UTF8")]
        UTF8 = 0,
        [CCode (cname = "PROVEN_CHARSET_UTF16LE")]
        UTF16LE = 1,
        [CCode (cname = "PROVEN_CHARSET_UTF16BE")]
        UTF16BE = 2,
        [CCode (cname = "PROVEN_CHARSET_ISO8859_1")]
        ISO8859_1 = 3,
        [CCode (cname = "PROVEN_CHARSET_ASCII")]
        ASCII = 4,
        [CCode (cname = "PROVEN_CHARSET_WINDOWS1252")]
        WINDOWS1252 = 5,
        [CCode (cname = "PROVEN_CHARSET_OTHER")]
        OTHER = 6
    }

    [CCode (cname = "ProvenContentTypeResult", has_type_id = false, destroy_function = "")]
    public struct ContentTypeResult {
        public int32         status;
        public char*         media_type;     public size_t media_type_len;
        public char*         subtype;        public size_t subtype_len;
        public char*         suffix;         public size_t suffix_len;
        public MediaCategory category;
        public Charset       charset;
        public bool          has_charset;
    }

    [CCode (cname = "proven_content_type_parse")]
    public static ContentTypeResult content_type_parse ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_content_type_free")]
    public static void content_type_free (ContentTypeResult* result);

    [CCode (cname = "proven_content_type_can_sniff_dangerous")]
    public static BoolResult content_type_can_sniff_dangerous ([CCode (array_length_type = "size_t")] uint8[] data);

    /* ================================================================
     * SafeBuffer
     * ================================================================ */

    [CCode (cname = "ProvenBoundedBuffer", has_type_id = false, destroy_function = "")]
    public struct BoundedBuffer {
        public uint8* data;
        public size_t capacity;
        public size_t length;
    }

    [CCode (cname = "ProvenBufferResult", has_type_id = false)]
    public struct BufferResult {
        public int32          status;
        public BoundedBuffer* buffer;
    }

    [CCode (cname = "proven_buffer_create")]
    public static BufferResult buffer_create (size_t capacity);

    [CCode (cname = "proven_buffer_append")]
    public static int32 buffer_append (BoundedBuffer* buffer, [CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_buffer_free")]
    public static void buffer_free (BoundedBuffer* buffer);

    /* ================================================================
     * SafeRateLimiter
     * ================================================================ */

    [CCode (cname = "ProvenRateLimiter", has_type_id = false, destroy_function = "")]
    public struct RateLimiter {
        public double tokens;
        public double capacity;
        public double refill_rate;
        public int64  last_refill;
    }

    [CCode (cname = "proven_rate_limiter_create")]
    public static RateLimiter* rate_limiter_create (double capacity, double refill_rate);

    [CCode (cname = "proven_rate_limiter_try_acquire")]
    public static bool rate_limiter_try_acquire (RateLimiter* limiter, double tokens);

    [CCode (cname = "proven_rate_limiter_free")]
    public static void rate_limiter_free (RateLimiter* limiter);

    /* ================================================================
     * SafeCircuitBreaker
     * ================================================================ */

    [CCode (cname = "ProvenCircuitState", cprefix = "PROVEN_CIRCUIT_", has_type_id = false)]
    public enum CircuitState {
        [CCode (cname = "PROVEN_CIRCUIT_CLOSED")]
        CLOSED = 0,
        [CCode (cname = "PROVEN_CIRCUIT_OPEN")]
        OPEN = 1,
        [CCode (cname = "PROVEN_CIRCUIT_HALF_OPEN")]
        HALF_OPEN = 2
    }

    [CCode (cname = "ProvenCircuitBreaker", has_type_id = false, destroy_function = "")]
    public struct CircuitBreaker {
        public CircuitState state;
        public uint32 failure_count;
        public uint32 failure_threshold;
        public uint32 success_count;
        public uint32 success_threshold;
        public int64  last_failure;
        public int64  timeout_ms;
    }

    [CCode (cname = "proven_circuit_breaker_create")]
    public static CircuitBreaker* circuit_breaker_create (
        uint32 failure_threshold, uint32 success_threshold, int64 timeout_ms
    );

    [CCode (cname = "proven_circuit_breaker_allow")]
    public static bool circuit_breaker_allow (CircuitBreaker* cb);

    [CCode (cname = "proven_circuit_breaker_success")]
    public static void circuit_breaker_success (CircuitBreaker* cb);

    [CCode (cname = "proven_circuit_breaker_failure")]
    public static void circuit_breaker_failure (CircuitBreaker* cb);

    [CCode (cname = "proven_circuit_breaker_state")]
    public static CircuitState circuit_breaker_state (CircuitBreaker* cb);

    [CCode (cname = "proven_circuit_breaker_free")]
    public static void circuit_breaker_free (CircuitBreaker* cb);

    /* ================================================================
     * SafeRetry
     * ================================================================ */

    [CCode (cname = "ProvenRetryConfig", has_type_id = false)]
    public struct RetryConfig {
        public uint32 max_attempts;
        public uint64 base_delay_ms;
        public uint64 max_delay_ms;
        public double multiplier;
    }

    [CCode (cname = "proven_retry_delay")]
    public static uint64 retry_delay (RetryConfig config, uint32 attempt);

    [CCode (cname = "proven_retry_should_retry")]
    public static bool retry_should_retry (RetryConfig config, uint32 attempt);

    /* ================================================================
     * SafeMonotonic
     * ================================================================ */

    [CCode (cname = "ProvenMonotonicCounter", has_type_id = false, destroy_function = "")]
    public struct MonotonicCounter {
        public uint64 value;
        public uint64 max_value;
    }

    [CCode (cname = "proven_monotonic_create")]
    public static MonotonicCounter* monotonic_create (uint64 initial, uint64 max_value);

    [CCode (cname = "proven_monotonic_next")]
    public static IntResult monotonic_next (MonotonicCounter* counter);

    [CCode (cname = "proven_monotonic_free")]
    public static void monotonic_free (MonotonicCounter* counter);
}
